# labelmaker

./: .gitignore  CMakeLists.txt  README.md
apps/: CMakeLIsts.txt
apps/labeler/: CMakeLists.txt
apps/labeler/src/: desktop.ini  labelmaker_version.h
apps/labelmaker/: CMakeLists.txt
apps/labelmaker/proto/: stateproto.pb.cc  stateproto.pb.h  stateproto.proto
apps/labelmaker/src/: imageinfo.cpp  imageinfo.h  imagelisttablemodel.cpp  imagelisttablemodel.h  imageviewerwidget.cpp  imageviewerwidget.h  labelmaker_version.cpp.in  labelsdialog.cpp  labelsdialog.h  labelsdialog.ui  main.cpp  mainpanelwidget.cpp  mainpanelwidget.h  mainwidget.cpp  mainwidget.h  mainwidget.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  pch.h  programstate.cpp  programstate.h  qflowlayout.cpp  qflowlayout.h  tag.cpp  tag.h  tagswidget.cpp  tagswidget.h  utility.cpp  utility.h
cmake/: ProjectSettings.cmake  QtSettings.cmake
dependencies/fmt_x64-windows-static/: CONTROL
dependencies/fmt_x64-windows-static/debug/lib/pkgconfig/: fmt.pc
dependencies/fmt_x64-windows-static/lib/pkgconfig/: fmt.pc
dependencies/fmt_x64-windows-static/share/fmt/: fmt-config-version.cmake  vcpkg_abi_info.txt
dependencies/spdlog_x64-windows-static/: CONTROL
dependencies/spdlog_x64-windows-static/share/spdlog/: vcpkg_abi_info.txt
libs/: CMakeLists.txt
libs/proto_messages/: CMakeLists.txt
libs/proto_messages/proto/: protoimageinfo.pb.cc  protoimageinfo.pb.h  protoimageinfo.proto  protolabels.pb.cc  protolabels.pb.h  protolabels.proto  prototag.pb.cc  prototag.pb.h  prototag.proto  prototagscache.pb.cc  prototagscache.pb.h  prototagscache.proto
